--- a/frontend/resources/public/index.html
+++ b/frontend/resources/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="/vendor/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="/vendor/css/re-com.css">
+    <link rel="stylesheet" href="alignmentviewer.css">
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
     <title>unknown-client</title>
@@ -15,6 +16,7 @@
       unknown-client is a JavaScript app. Please enable JavaScript to continue.
     </noscript>
     <div id="app"></div>
-    <script src="/js/compiled/app.js"></script>
+    <script src="/js/libs.js"></script>
+    <script src="/js/compiled/app.js"></script>	
   </body>
 </html>
