--- a/frontend/resources/public/index.html
+++ b/frontend/resources/public/index.html
@@ -16,6 +16,7 @@
       unknown-client is a JavaScript app. Please enable JavaScript to continue.
     </noscript>
     <div id="app"></div>
+    <script src="/js/detect-element-resize.js"></script>	
     <script src="/js/compiled/app.js"></script>	
   </body>
 </html>
