--- a/frontend/resources/public/index.html
+++ b/frontend/resources/public/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/vendor/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="/vendor/css/re-com.css">
-    <link rel="stylesheet" href="alignmentviewer.css">
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
     <title>unknown-client</title>
@@ -17,6 +16,8 @@
     </noscript>
     <div id="app"></div>
     <script src="/js/detect-element-resize.js"></script>	
-    <script src="/js/compiled/app.js"></script>	
+    <script src="/js/compiled/app.js"></script>
+    <script src="https://3Dmol.org/build/3Dmol-min.js"></script>     
+    <script src="https://3Dmol.org/build/3Dmol.ui-min.js"></script>     
   </body>
 </html>
