sheet my machine is dying

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
     <script src="/js/detect-element-resize.js"></script>	
     <script type="module" src="/public/js/imports.js"></script>
     <script defer src="/js/main.js"></script>	
-    <!-- <script src="https://3Dmol.org/build/3Dmol-min.js"></script>      -->
-    <!-- <script src="https://3Dmol.org/build/3Dmol.ui-min.js"></script> -->     
+    <script src="https://3Dmol.org/build/3Dmol-min.js"></script>
+    <script src="https://3Dmol.org/build/3Dmol.ui-min.js"></script>     
   </body>
 </html>
