--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/vendor/css/bootstrap@4.1.3.min.css">
     <link rel="stylesheet" href="/vendor/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="/vendor/css/re-com.css">
-    <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://esm.sh/higlass@1.13/dist/hglib.css"
-  />
+    <link href="/vendor/css/fonts.googleapis.Roboto.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/css/fonts.googleapis.Roboto+Condensed.css" rel="stylesheet" type="text/css">
+    <script src="/js/detect-element-resize.js"></script>
+    <script src="/js/3Dmol-min.js"></script>
+    <script src="/js/3Dmol.ui-min.js"></script>
     <title>unknown-client</title>
   </head>
   <body>
@@ -17,13 +18,6 @@
       unknown-client is a JavaScript app. Please enable JavaScript to continue.
     </noscript>
     <div id="app"></div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://3Dmol.org/build/3Dmol-min.js"></script>
-    <script src="https://3Dmol.org/build/3Dmol.ui-min.js"></script>
-    <script src="/js/detect-element-resize.js"></script>	
-    <script type="module" src="/js/imports.js"></script>
-    <script defer src="/js/main.js"></script>	
+    <script type="module" defer src="/public/js/main.js"></script>	
   </body>
 </html>
