--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,9 @@
     <script src="/js/detect-element-resize.js"></script>
     <script src="/js/3Dmol-min.js"></script>
     <script src="/js/3Dmol.ui-min.js"></script>
+    <script src="/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="/js/popper.js@1.14.3.js"></script>
+    <script src="/js/bootstrap@4.1.3.js"></script>
     <title>unknown-client</title>
   </head>
   <body>
