--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="/vendor/css/bootstrap@4.1.3.min.css">
-    <link rel="stylesheet" href="/vendor/css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" href="/vendor/css/re-com.css">
-    <link href="/vendor/css/fonts.googleapis.Roboto.css" rel="stylesheet" type="text/css">
-    <link href="/vendor/css/fonts.googleapis.Roboto+Condensed.css" rel="stylesheet" type="text/css">
-    <script src="/js/detect-element-resize.js"></script>
-    <script src="/js/jquery-3.3.1.slim.min.js"></script>
-    <script src="/js/popper.js@1.14.3.js"></script>
-    <script src="/js/bootstrap@4.1.3.js"></script>
+    <link rel="stylesheet" href="vendor/css/bootstrap@4.1.3.min.css">
+    <link rel="stylesheet" href="vendor/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="vendor/css/re-com.css">
+    <link rel="stylesheet" href="vendor/css/re-com-demo.css">
+    <link href="vendor/css/fonts.googleapis.Roboto.css" rel="stylesheet" type="text/css">
+    <link href="vendor/css/fonts.googleapis.Roboto+Condensed.css" rel="stylesheet" type="text/css">
+    <script src="vendor/scripts/detect-element-resize.js"></script>
+    <script src="js/jquery-3.3.1.slim.min.js"></script>
+    <script src="js/popper.js@1.14.3.js"></script>
+    <script src="js/bootstrap@4.1.3.js"></script>
     <title>Brochado Lab Pipeline Tool</title>
   </head>
   <body>
@@ -19,6 +20,6 @@
       Brochado Lab Pipeline Tool is a JavaScript app. Please enable JavaScript to continue.
     </noscript>
     <div id="app"></div>
-    <script type="module" defer src="/public/js/main.js"></script>	
+    <script type="module" defer src="public/js/main.js"></script>	
   </body>
 </html>
